{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 68,
  "lineage": "111b4b05-bea2-97a4-207a-046fde165574",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jhlee_eip_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09b8c55c18c1567bc",
            "domain": "vpc",
            "id": "eipalloc-0295d319ed4f9791d",
            "instance": "i-06de25d16f5df57c3",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-0c7d40eef5a7966b0",
            "private_dns": "ip-10-2-0-11.ap-northeast-3.compute.internal",
            "private_ip": "10.2.0.11",
            "public_dns": "ec2-15-152-121-195.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.152.121.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jhlee_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jhlee_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-019b764e3dc689f8c",
            "domain": "vpc",
            "id": "eipalloc-04729b5c59da2fa9b",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-0c1285b4107e32226",
            "private_dns": "ip-10-2-0-109.ap-northeast-3.compute.internal",
            "private_ip": "10.2.0.109",
            "public_dns": "ec2-13-208-153-198.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.153.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f824a105bf613ea1",
            "domain": "vpc",
            "id": "eipalloc-09e67645e2e341d6e",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-014e2920a6e2e2b8a",
            "private_dns": "ip-10-2-2-42.ap-northeast-3.compute.internal",
            "private_ip": "10.2.2.42",
            "public_dns": "ec2-13-208-146-30.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.146.30",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jhlee_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0791d2e614355a9eb",
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:instance/i-06de25d16f5df57c3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06de25d16f5df57c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7d40eef5a7966b0",
            "private_dns": "ip-10-2-0-11.ap-northeast-3.compute.internal",
            "private_ip": "10.2.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00251c6309eb8f120",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b149e32bee4066d9",
            "tags": {
              "Name": "jhlee-web-a1"
            },
            "tags_all": {
              "Name": "jhlee-web-a1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-005fabbbab2bfcffe"
            ]
          },
          "dependencies": [
            "aws_security_group.jhlee_allow_http",
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jhlee_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:internet-gateway/igw-0de832b674a3b972e",
            "id": "igw-0de832b674a3b972e",
            "owner_id": "164134553042",
            "tags": {
              "Name": "jhlee-ig"
            },
            "tags_all": {
              "Name": "jhlee-ig"
            },
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jhlee_ngw_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04729b5c59da2fa9b",
            "connectivity_type": "public",
            "id": "nat-09aa1cee44f158633",
            "network_interface_id": "eni-0c1285b4107e32226",
            "private_ip": "10.2.0.109",
            "public_ip": "13.208.153.198",
            "subnet_id": "subnet-0b149e32bee4066d9"
          },
          "dependencies": [
            "aws_eip.jhlee_nat",
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e67645e2e341d6e",
            "connectivity_type": "public",
            "id": "nat-09fea9a437fa85b3d",
            "network_interface_id": "eni-014e2920a6e2e2b8a",
            "private_ip": "10.2.2.42",
            "public_ip": "13.208.146.30",
            "subnet_id": "subnet-017e550639b213057"
          },
          "dependencies": [
            "aws_eip.jhlee_nat",
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jhlee_natrt_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:route-table/rtb-0bf7bb1d8550a9226",
            "id": "rtb-0bf7bb1d8550a9226",
            "owner_id": "164134553042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09aa1cee44f158633",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jhleev-natrt-pria"
            },
            "tags_all": {
              "Name": "jhleev-natrt-pria"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc",
            "aws_eip.jhlee_nat",
            "aws_nat_gateway.jhlee_ngw_pri"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:route-table/rtb-0ada131a3d152b81f",
            "id": "rtb-0ada131a3d152b81f",
            "owner_id": "164134553042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09fea9a437fa85b3d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jhleev-natrt-pria"
            },
            "tags_all": {
              "Name": "jhleev-natrt-pria"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.jhlee_nat",
            "aws_nat_gateway.jhlee_ngw_pri",
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jhlee_pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:route-table/rtb-0de70f0edc387d1a2",
            "id": "rtb-0de70f0edc387d1a2",
            "owner_id": "164134553042",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de832b674a3b972e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jhlee-pubrt"
            },
            "tags_all": {
              "Name": "jhlee-pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jhlee_ig",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jhlee_pri_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be409fe6cef15a25",
            "route_table_id": "rtb-0bf7bb1d8550a9226",
            "subnet_id": "subnet-08264c97a3c9f5856"
          },
          "dependencies": [
            "aws_nat_gateway.jhlee_ngw_pri",
            "aws_route_table.jhlee_natrt_pri",
            "aws_subnet.jhlee_pri",
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc",
            "aws_eip.jhlee_nat"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049c24fd3350ff808",
            "route_table_id": "rtb-0ada131a3d152b81f",
            "subnet_id": "subnet-0a9f6cb56d270ab15"
          },
          "dependencies": [
            "aws_eip.jhlee_nat",
            "aws_nat_gateway.jhlee_ngw_pri",
            "aws_route_table.jhlee_natrt_pri",
            "aws_subnet.jhlee_pri",
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jhlee_pub_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0746f7ff297b0b548",
            "route_table_id": "rtb-0de70f0edc387d1a2",
            "subnet_id": "subnet-0b149e32bee4066d9"
          },
          "dependencies": [
            "aws_internet_gateway.jhlee_ig",
            "aws_route_table.jhlee_pubrt",
            "aws_subnet.jhlee_pub",
            "aws_vpc.jhlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe20a8d08d7e84c0",
            "route_table_id": "rtb-0de70f0edc387d1a2",
            "subnet_id": "subnet-017e550639b213057"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc",
            "aws_internet_gateway.jhlee_ig",
            "aws_route_table.jhlee_pubrt",
            "aws_subnet.jhlee_pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jhlee_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:security-group/sg-005fabbbab2bfcffe",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005fabbbab2bfcffe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "164134553042",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jhlee-allow-http"
            },
            "tags_all": {
              "Name": "jhlee-allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jhlee_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:subnet/subnet-08264c97a3c9f5856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-08264c97a3c9f5856",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:subnet/subnet-0a9f6cb56d270ab15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-0a9f6cb56d270ab15",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jhlee_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:subnet/subnet-0b149e32bee4066d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-0b149e32bee4066d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:subnet/subnet-017e550639b213057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-017e550639b213057",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "164134553042",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "vpc_id": "vpc-0ac693759bc583762"
          },
          "dependencies": [
            "aws_vpc.jhlee_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jhlee_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:164134553042:vpc/vpc-0ac693759bc583762",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-03f3f1d7d5ad80fd2",
            "default_route_table_id": "rtb-0743f58050f20176d",
            "default_security_group_id": "sg-0986577530923f746",
            "dhcp_options_id": "dopt-048f769aed7ead829",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ac693759bc583762",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0743f58050f20176d",
            "owner_id": "164134553042",
            "tags": {
              "name": "jhlee-vpc"
            },
            "tags_all": {
              "name": "jhlee-vpc"
            }
          }
        }
      ]
    }
  ]
}